--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,8 +25,10 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation 'com.andkulikov:transitionseverywhere:2.0.0-alpha02'
-    implementation 'androidx.transition:transition:1.1.0-alpha02'
+    implementation 'com.jakewharton:butterknife:10.1.0'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:10.1.0'
+    implementation 'com.andkulikov:transitionseverywhere:2.0.0-beta01'
+    implementation 'androidx.transition:transition:1.1.0-beta01'
     implementation 'androidx.vectordrawable:vectordrawable-animated:1.0.0'
     implementation 'androidx.vectordrawable:vectordrawable:1.0.1'
     implementation 'androidx.appcompat:appcompat:1.1.0-alpha03'
