Создать строковый “соединитель” с применением паттерна MVP без moxy. Под строковым “соединителем” имеется ввиду экран с EditText, Button, TextView. При введении текста в EditText и нажатии на Button текст отображается внизу на TextView. При введении другого текста и нажатии от добавляется к существующему. Например, ввели текст “счастье” и нажали на кнопку. Он появился в TextView. Далее ввели слово “солнце” и нажали на кнопку. Теперь в TextView должен быть текст “счастьесолнце”. И т.д.
Создать строковый “соединитель” с применением паттерна MVP с помощью moxy. *https://docs.google.com/drawings/d/1xMSUyEShM84VGdplkceuMnkxes9RS_rQGisi8Q-20-s/edit?usp=sharing

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,14 +12,14 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme0"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".mainActivity.MainActivity"
+        <activity android:name=".view.mainActivity.MainActivity"
             android:windowSoftInputMode="stateHidden">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".colorSelectionActivity.ColorThemeSelection">
+        <activity android:name=".view.colorSelectionActivity.ColorThemeSelection">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
                 <category android:name="android.intent.category.DEFAULT" />
