устранено: пропадание наблюдателя в ItemPresenter при повороте экрана
добавлено: формирование базового запроса и получение картинок в PIXABAY сервисе

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="reschikov.geekbrains.gallery">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
         android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
