--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme0"
+        android:name=".data.database.AppDataBase"
         tools:ignore="GoogleAppIndexingWarning">
         <activity android:name=".view.mainActivity.MainActivity"
             android:windowSoftInputMode="stateHidden">
