--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,11 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation 'com.google.dagger:dagger:2.18'
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.18'
+    implementation 'com.google.dagger:dagger-android:2.15'
+    implementation 'com.google.dagger:dagger-android-support:2.15'
+    annotationProcessor 'com.google.dagger:dagger-android-processor:2.15'
     implementation 'androidx.room:room-runtime:2.1.0-alpha07'
     annotationProcessor 'androidx.room:room-compiler:2.1.0-alpha07'
     implementation 'androidx.room:room-rxjava2:2.1.0-alpha07'
