--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,12 +27,12 @@ dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.google.dagger:dagger:2.18'
     annotationProcessor 'com.google.dagger:dagger-compiler:2.18'
-    implementation 'com.google.dagger:dagger-android:2.15'
-    implementation 'com.google.dagger:dagger-android-support:2.15'
-    annotationProcessor 'com.google.dagger:dagger-android-processor:2.15'
-    implementation 'androidx.room:room-runtime:2.1.0-alpha07'
-    annotationProcessor 'androidx.room:room-compiler:2.1.0-alpha07'
-    implementation 'androidx.room:room-rxjava2:2.1.0-alpha07'
+    implementation 'com.google.dagger:dagger-android:2.18'
+    implementation 'com.google.dagger:dagger-android-support:2.18'
+    annotationProcessor 'com.google.dagger:dagger-android-processor:2.18'
+    implementation 'androidx.room:room-runtime:2.1.0-beta01'
+    annotationProcessor 'androidx.room:room-compiler:2.1.0-beta01'
+    implementation 'androidx.room:room-rxjava2:2.1.0-beta01'
     implementation 'com.github.bumptech.glide:glide:4.9.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
     implementation 'com.squareup.retrofit2:retrofit:2.5.0'
@@ -46,13 +46,14 @@ dependencies {
     implementation 'com.jakewharton:butterknife:10.1.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.1.0'
     implementation 'com.andkulikov:transitionseverywhere:2.0.0-beta01'
-    implementation 'androidx.transition:transition:1.1.0-beta01'
+    implementation 'androidx.transition:transition:1.2.0-alpha01'
     implementation 'androidx.vectordrawable:vectordrawable-animated:1.0.0'
     implementation 'androidx.vectordrawable:vectordrawable:1.0.1'
-    implementation 'androidx.appcompat:appcompat:1.1.0-alpha04'
+    implementation 'androidx.appcompat:appcompat:1.1.0-alpha05'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'com.google.android.material:material:1.1.0-alpha05'
+    implementation 'com.google.android.material:material:1.1.0-alpha06'
+    testImplementation 'org.mockito:mockito-core:2.27.0'
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test:runner:1.2.0-alpha05'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0-alpha05'
+    androidTestImplementation 'androidx.test:runner:1.2.0-beta01'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0-beta01'
 }
